--- a/src/Client/Views/ListOfVehiclesView/VehicleViewCell/VehicleListViewCell.fxml
+++ b/src/Client/Views/ListOfVehiclesView/VehicleViewCell/VehicleListViewCell.fxml
@@ -5,10 +5,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.image.Image?>
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="580.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="565.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="10.0" layoutY="3.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="10.0" layoutY="3.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-10.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fx:id="carSymbol" fitHeight="30.0" fitWidth="30.0" layoutX="18.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="15.0" />
             <Label alignment="CENTER" layoutX="19.0" layoutY="2.0" prefHeight="13.0" prefWidth="37.0" text="Type" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
@@ -18,7 +17,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="59.0" layoutY="10.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="67.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="59.0" layoutY="10.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="57.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="19.0" layoutY="2.0" prefHeight="13.0" prefWidth="37.0" text="Make &amp; Model" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                <font>
@@ -33,7 +32,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="135.0" layoutY="-1.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="134.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="135.0" layoutY="-1.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="124.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="19.0" layoutY="2.0" prefHeight="13.0" prefWidth="37.0" text="Year" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                <font>
@@ -43,7 +42,7 @@
             <Label fx:id="yearLabel" alignment="CENTER" contentDisplay="TOP" layoutX="19.0" layoutY="20.0" text="2011" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="198.0" layoutY="2.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="268.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="198.0" layoutY="2.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="258.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="19.0" layoutY="2.0" prefHeight="13.0" prefWidth="37.0" text="Gearbox &amp; Fuel" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                <font>
@@ -63,12 +62,12 @@
             <ImageView fx:id="gearboxSymbol" fitHeight="13.0" fitWidth="13.0" layoutX="7.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="17.0" AnchorPane.leftAnchor="7.0">
 
             </ImageView>
-            <ImageView fx:id="fuelSymbol" fitHeight="13.0" fitWidth="13.0" layoutX="7.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="7.0" >
+            <ImageView fx:id="fuelSymbol" fitHeight="13.0" fitWidth="13.0" layoutX="7.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="7.0">
 
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="208.0" layoutY="12.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="335.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="208.0" layoutY="12.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="325.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="19.0" layoutY="2.0" prefHeight="13.0" prefWidth="37.0" text="License plate" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                <font>
@@ -84,7 +83,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="218.0" layoutY="22.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="402.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="218.0" layoutY="22.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="392.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="19.0" layoutY="2.0" prefHeight="13.0" prefWidth="37.0" text="Engines power" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                <font>
@@ -97,7 +96,7 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="228.0" layoutY="32.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="469.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="228.0" layoutY="32.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="459.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="19.0" layoutY="2.0" prefHeight="13.0" prefWidth="37.0" text="Price" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                <font>
@@ -107,7 +106,7 @@
             <Label fx:id="priceLabel" alignment="CENTER" contentDisplay="TOP" layoutX="19.0" layoutY="20.0" text="750 dkk" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="145.0" layoutY="9.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="201.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="145.0" layoutY="9.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="191.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="19.0" layoutY="2.0" prefHeight="13.0" prefWidth="37.0" text="Seats" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                <font>
@@ -119,10 +118,10 @@
             <ImageView fx:id="seatSymbol" fitHeight="20.0" fitWidth="20.0" layoutX="32.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="9.0" AnchorPane.rightAnchor="15.0" />
          </children>
       </AnchorPane>
-      <ImageView onMouseClicked="#clickedEditButton" fx:id="editSymbol" fitHeight="20.0" fitWidth="20.0" layoutX="534.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="40.0" >
+      <ImageView fx:id="editSymbol" fitHeight="20.0" fitWidth="20.0" layoutX="534.0" layoutY="16.0" onMouseClicked="#clickedEditButton" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="30.0">
 
       </ImageView>
-      <ImageView onMouseClicked="#clickedDeleteButton" fx:id="deleteSymbol" fitHeight="20.0" fitWidth="20.0" layoutX="565.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="15.0" >
+      <ImageView fx:id="deleteSymbol" fitHeight="20.0" fitWidth="20.0" layoutX="565.0" layoutY="17.0" onMouseClicked="#clickedDeleteButton" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="7.5">
 
       </ImageView>
    </children>
