--- a/src/Client/Views/AddVehicleView/AddVehicleView.fxml
+++ b/src/Client/Views/AddVehicleView/AddVehicleView.fxml
@@ -24,13 +24,13 @@
       <Label layoutX="22.0" layoutY="183.0" text="Year:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="190.0" />
       <TextField fx:id="yearField" layoutX="62.0" layoutY="178.0" prefHeight="27.0" prefWidth="100.0" promptText="Vehicle's year" AnchorPane.leftAnchor="65.0" AnchorPane.topAnchor="185.0" />
       <Label layoutX="275.0" layoutY="72.0" text="Select gearbox:" AnchorPane.leftAnchor="275.0" AnchorPane.topAnchor="70.0" />
-      <RadioButton fx:id="automaticGearBoxButton" layoutX="370.0" layoutY="72.0" mnemonicParsing="false" text="automatic" AnchorPane.leftAnchor="370.0" AnchorPane.topAnchor="65.0" />
-      <RadioButton fx:id="manualGearBoxButton" layoutX="462.0" layoutY="72.0" mnemonicParsing="false" text="manual" AnchorPane.leftAnchor="470.0" AnchorPane.topAnchor="65.0" />
+      <RadioButton onMouseClicked="#selectAutomatic" fx:id="automaticGearBoxButton" layoutX="370.0" layoutY="72.0" mnemonicParsing="false" text="automatic" AnchorPane.leftAnchor="370.0" AnchorPane.topAnchor="65.0" />
+      <RadioButton onMouseClicked="#selectManual" fx:id="manualGearBoxButton" layoutX="462.0" layoutY="72.0" mnemonicParsing="false" text="manual" AnchorPane.leftAnchor="470.0" AnchorPane.topAnchor="65.0" />
       <Label layoutX="275.0" layoutY="109.0" text="Select type of fuel:" AnchorPane.leftAnchor="275.0" AnchorPane.topAnchor="110.0" />
-      <RadioButton fx:id="petrolTypeButton" layoutX="286.0" layoutY="132.0" mnemonicParsing="false" text="petrol" AnchorPane.leftAnchor="290.0" AnchorPane.topAnchor="130.0" />
-      <RadioButton fx:id="dieselTypeButton" layoutX="286.0" layoutY="159.0" mnemonicParsing="false" text="diesel" AnchorPane.leftAnchor="290.0" AnchorPane.topAnchor="160.0" />
-      <RadioButton fx:id="hybridTypeButton" layoutX="390.0" layoutY="130.0" mnemonicParsing="false" text="hybrid" AnchorPane.leftAnchor="390.0" AnchorPane.topAnchor="130.0" />
-      <RadioButton fx:id="electricTypeButton" layoutX="390.0" layoutY="160.0" mnemonicParsing="false" text="electric" AnchorPane.leftAnchor="390.0" AnchorPane.topAnchor="160.0" />
+      <RadioButton onMouseClicked="#selectPetrol" fx:id="petrolTypeButton" layoutX="286.0" layoutY="132.0" mnemonicParsing="false" text="petrol" AnchorPane.leftAnchor="290.0" AnchorPane.topAnchor="130.0" />
+      <RadioButton onMouseClicked="#selectDiesel" fx:id="dieselTypeButton" layoutX="286.0" layoutY="159.0" mnemonicParsing="false" text="diesel" AnchorPane.leftAnchor="290.0" AnchorPane.topAnchor="160.0" />
+      <RadioButton onMouseClicked="#selectHybrid" fx:id="hybridTypeButton" layoutX="390.0" layoutY="130.0" mnemonicParsing="false" text="hybrid" AnchorPane.leftAnchor="390.0" AnchorPane.topAnchor="130.0" />
+      <RadioButton onMouseClicked="#selectElectric" fx:id="electricTypeButton" layoutX="390.0" layoutY="160.0" mnemonicParsing="false" text="electric" AnchorPane.leftAnchor="390.0" AnchorPane.topAnchor="160.0" />
       <Label layoutX="21.0" layoutY="236.0" text="Number of seats:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="235.0" />
       <TextField fx:id="nbOfSeatsField" layoutX="135.0" layoutY="231.0" prefHeight="27.0" prefWidth="55.0" promptText="0" AnchorPane.leftAnchor="135.0" AnchorPane.topAnchor="230.0" />
       <Label layoutX="21.0" layoutY="266.0" text="Price per day (dkk):" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="270.0" />
