--- a/src/Client/Views/ListOfPersonalBookings/ListOfPersonalBookingsView.fxml
+++ b/src/Client/Views/ListOfPersonalBookings/ListOfPersonalBookingsView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.ListOfBookingsView.ListOfBookingsViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.ListOfPersonalBookings.ListOfPersonalBookingsViewController">
    <children>
       <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMenuButton" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
       <Label layoutX="25.0" layoutY="31.0" text="My Bookings" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
