--- a/src/Client/Views/ListOfPersonalBookings/PersonalBookingCell/PersonalBookingViewCell.fxml
+++ b/src/Client/Views/ListOfPersonalBookings/PersonalBookingCell/PersonalBookingViewCell.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="73.0" prefWidth="545.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="73.0" prefWidth="545.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="156.0" prefHeight="73.0" prefWidth="87.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="156.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="221.0" layoutY="2.0" prefHeight="73.0" prefWidth="93.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="213.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="-1.0" layoutY="11.0" prefHeight="13.0" prefWidth="95.0" text="Start Time" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -18,7 +18,7 @@
             <Label fx:id="startDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="38.0" prefWidth="93.0" text="26/05/2021" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutY="4.0" prefHeight="73.0" prefWidth="71.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutY="4.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="1.0" layoutY="11.0" prefHeight="13.0" prefWidth="71.0" text="Booking ID" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -28,7 +28,17 @@
             <Label fx:id="bookingIdLabel" alignment="CENTER" contentDisplay="TOP" layoutX="3.0" layoutY="36.0" prefHeight="17.0" prefWidth="71.0" text="293346" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="77.0" layoutY="1.0" prefHeight="73.0" prefWidth="87.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="77.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="62.0" layoutY="1.0" prefHeight="73.0" prefWidth="71.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="71.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Label alignment="CENTER" layoutX="8.0" layoutY="7.0" prefHeight="13.0" prefWidth="71.0" text="Customer CPR" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+            <Label fx:id="customerIdLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-2.0" layoutY="33.0" prefHeight="17.0" prefWidth="71.0" text="463329" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="133.0" layoutY="1.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="142.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="1.0" layoutY="11.0" prefHeight="13.0" prefWidth="71.0" text="License Plate" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -38,7 +48,7 @@
             <Label fx:id="licensePlateLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-1.0" layoutY="26.0" prefHeight="17.0" prefWidth="71.0" text="BA40 136" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="243.0" prefHeight="73.0" prefWidth="93.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="243.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="314.0" layoutY="10.0" prefHeight="73.0" prefWidth="93.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="308.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="-1.0" layoutY="11.0" prefHeight="13.0" prefWidth="95.0" text="End Time" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -48,7 +58,7 @@
             <Label fx:id="endDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="38.0" prefWidth="93.0" text="30/05/2021" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="336.0" prefHeight="73.0" prefWidth="87.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="336.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="416.0" layoutY="-3.0" prefHeight="73.0" prefWidth="71.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="403.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="1.0" layoutY="11.0" prefHeight="13.0" prefWidth="71.0" text="Price" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -58,14 +68,14 @@
             <Label fx:id="priceLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-4.0" layoutY="26.0" prefHeight="17.0" prefWidth="71.0" text="1450" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="407.0" prefHeight="73.0" prefWidth="123.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="470.0" layoutY="-2.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button alignment="CENTER" layoutX="26.0" layoutY="25.0" mnemonicParsing="false" onAction="#onClickedEditButton" prefHeight="24.0" prefWidth="36.0" text="EDIT" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="61.0" AnchorPane.topAnchor="25.0">
+            <Button alignment="CENTER" layoutX="8.0" layoutY="23.0" mnemonicParsing="false" onAction="#onClickedEditButton" prefHeight="24.0" prefWidth="36.0" text="EDIT" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="25.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Button>
-            <Button layoutX="76.0" layoutY="25.0" mnemonicParsing="false" onAction="#onClickedDeleteButton" text="X" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="25.0">
+            <Button onAction="#onClickedDeleteButton" layoutX="42.0" layoutY="24.0" mnemonicParsing="false" text="X" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="25.0">
                <font>
                   <Font size="10.0" />
                </font>
