--- a/src/Client/Views/MenuView/MenuView.fxml
+++ b/src/Client/Views/MenuView/MenuView.fxml
@@ -20,5 +20,7 @@
       <Button layoutX="15.0" layoutY="275.0" mnemonicParsing="false" onAction="#onListOfBookingButton" prefHeight="40.0" prefWidth="217.0" text="LIST OF ALL BOOKINGS" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="270.0" />
       <Button layoutX="352.0" layoutY="120.0" mnemonicParsing="false" onAction="#onAddNewCustomerButton" prefHeight="40.0" prefWidth="217.0" text="ADD NEW CUSTOMER" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="120.0" />
       <Button layoutX="362.0" layoutY="130.0" mnemonicParsing="false" onAction="#onListOfAllCustomersButton" prefHeight="40.0" prefWidth="217.0" text="LIST OF ALL CUSTOMERS" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="170.0" />
+      <Button layoutX="353.0" layoutY="220.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="217.0" text="ADD NEW EMPLOYEE" />
+      <Button layoutX="353.0" layoutY="270.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="217.0" text="LIST OF ALL EMPLOYEE" />
    </children>
 </AnchorPane>
