--- a/src/Client/Views/AddCustomerAccountView/AddCustomerAccount.fxml
+++ b/src/Client/Views/AddCustomerAccountView/AddCustomerAccount.fxml
@@ -6,29 +6,28 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddCustomerAccountView.AddCustomerAccountViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddCustomerAccountView.AddCustomerAccountViewController">
    <children>
-      <Button onAction="#onMenuButton" layoutX="462.0" layoutY="346.0" mnemonicParsing="false" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
+      <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMenuButton" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
       <Label layoutX="25.0" layoutY="31.0" text="Create a customer account" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
       </Label>
       <Label layoutX="25.0" layoutY="61.0" text="Enter a full name of a customer:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="60.0" />
-      <Button onAction="#onCreateButton" layoutX="365.0" layoutY="343.0" mnemonicParsing="false" text="Create an account" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
+      <Button layoutX="365.0" layoutY="343.0" mnemonicParsing="false" onAction="#onCreateButton" text="Create an account" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
       <TextField fx:id="firstNameField" layoutX="25.0" layoutY="85.0" prefHeight="27.0" prefWidth="120.0" promptText="Fisrt name" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="85.0" />
       <TextField fx:id="lastNameField" layoutX="150.0" layoutY="85.0" prefHeight="27.0" prefWidth="120.0" promptText="Last name" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="85.0" />
       <Label layoutX="25.0" layoutY="120.0" text="Date of birth:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="120.0" />
-      <DatePicker fx:id="dateOfBirthPicker" layoutX="27.0" layoutY="143.0" prefWidth="180.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="145.0" />
+      <DatePicker fx:id="dateOfBirthPicker" editable="false" layoutX="27.0" layoutY="143.0" prefWidth="180.0" showWeekNumbers="true" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="145.0" />
       <Label layoutX="27.0" layoutY="183.0" text="Enter an E-Mail:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="180.0" />
       <TextField fx:id="eMailField" layoutX="25.0" layoutY="200.0" prefHeight="27.0" prefWidth="245.0" promptText="rent4u@rent4u.dk" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="205.0" />
       <Label layoutX="321.0" layoutY="61.0" text="Choose a password:" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="60.0" />
       <TextField fx:id="passwordField" layoutX="321.0" layoutY="85.0" prefHeight="27.0" prefWidth="188.0" promptText="Enter password" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="85.0" />
       <TextField fx:id="rePasswordField" layoutX="321.0" layoutY="124.0" prefHeight="27.0" prefWidth="188.0" promptText="Confirm password" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="120.0" />
-      <Label layoutX="321.0" layoutY="183.0" text="Phone number:" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="180.0"></Label>
-      <Label fx:id="passwordCheckLabel" layoutX="320.0" layoutY="150.0" text="Passwords are not the same" AnchorPane.leftAnchor="320.0"/>
+      <Label layoutX="321.0" layoutY="183.0" text="Phone number:" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="180.0" />
+      <Label fx:id="passwordCheckLabel" layoutX="320.0" layoutY="150.0" text="Passwords are not the same" AnchorPane.leftAnchor="320.0" />
       <TextField fx:id="phoneField" layoutX="321.0" layoutY="200.0" prefHeight="27.0" prefWidth="188.0" promptText=" +45 00 00 00 00" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="205.0" />
       <Label layoutX="27.0" layoutY="239.0" text="Driving license number:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="240.0" />
       <TextField fx:id="drivingLicenseField" layoutX="25.0" layoutY="256.0" prefHeight="27.0" prefWidth="245.0" promptText="XXXXX" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="265.0" />
